Mon Sep 13 06:16:31 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/Container_Base.cpp:
	* ciao/Container_Base.cpp:

	  Fixed wrong ACE_CHECK usage. This should fix compilation errors
	  in Full_Reactors build.

Mon Sep 13 04:20:44 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/CCM_Core.mpc:

	  Removed iorinterceptor and objreftemplate from CIAO_DnC_Server
	  project. No reason to believe that they need thes. This should
	  hopefully remove the warnings in our daily builds.
	
	* examples/Hello/Sender/Sender_exec.cpp:

	  Added a simple debug statement. 
	
	* performance-tests/Benchmark/Benchmark.mpc:

	  Tried fixing the link errors on the scoreboard.

Mon Sep 13 03:50:08 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* DAnCE/ciao/CCM_Core.mpc:
	* DAnCE/ciao/Container_Base.cpp:
	* DAnCE/ciao/Container_Base.h:
	* DAnCE/ciao/Container_Base.inl:
	* DAnCE/ciao/Port_Activator.cpp:
	* DAnCE/ciao/Port_Activator.h:
	* DAnCE/ciao/Port_Activator_T.cpp:
	* DAnCE/ciao/Port_Activator_T.h:
	* DAnCE/ciao/Servant_Activator.cpp:
	* DAnCE/ciao/Servant_Activator.h:

	  Replicated changes to DAnCE. DAnCE testing hasn't been completed
	  yet. 

Sun Sep 12 22:10:38 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

 	* CIDLC/ServantHeaderGenerator.cpp:
	* CIDLC/ServantSourceGenerator.cpp:

	  Changes to the CIDL which uses the servant and port activators
	  checked in now. 

Mon Sep 13 03:00:52 2004  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	To overcome the long standing problem in DAnCE, we are now making
        the facet and consumer servants to be on demand activatable. This
        would make sure that application level ports are not activated
        until used. This should help address the problems between DAnCE
        and existing way of doing things. These changes should be useful
        even after old CIAO is removed since we want to give existing